Completed migration from Maven to Gradle